# www/swagger.json
@@ -6,7 +6,7 @@
   },
   "tags": [
     {
-      "name": "TemplateService"
+      "name": "TransactionStatusService"
     }
   ],
   "consumes": [
@@ -20,7 +20,7 @@
       "post": {
         "summary": "Get template data",
         "description": "This API for get template data",
-        "operationId": "TemplateService_GetAllTemplates",
+        "operationId": "TransactionStatusService_GetAllTemplates",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -54,7 +54,7 @@
       "post": {
         "summary": "Get template data detail",
         "description": "This API for get template data detail by id",
-        "operationId": "TemplateService_GetTemplateDetail",
+        "operationId": "TransactionStatusService_GetTemplateDetail",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -88,7 +88,7 @@
       "post": {
         "summary": "Delete template data",
         "description": "This API for delete template data",
-        "operationId": "TemplateService_DeleteTemplate",
+        "operationId": "TransactionStatusService_DeleteTemplate",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -122,7 +122,7 @@
       "get": {
         "summary": "Health Check",
         "description": "This API for check server's health",
-        "operationId": "TemplateService_HealthCheck",
+        "operationId": "TransactionStatusService_HealthCheck",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -147,7 +147,7 @@
       "post": {
         "summary": "Save template data",
         "description": "This API for save template data",
-        "operationId": "TemplateService_SaveTemplate",
+        "operationId": "TransactionStatusService_SaveTemplate",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -181,7 +181,7 @@
       "post": {
         "summary": "Update template data",
         "description": "This API for update template data",
-        "operationId": "TemplateService_UpdateTemplate",
+        "operationId": "TransactionStatusService_UpdateTemplate",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -440,8 +440,7 @@
           "type": "string"
         },
         "rawUserData": {
-          "type": "string",
-          "format": "byte"
+          "type": "string"
         },
         "createdBy": {
           "type": "string"
